crates/biome_cli/tests/snapshots/main_commands_format/format_empty_vue_js_files_write.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `file.vue`

```vue
<template></template>
```

# Emitted Messages

```block
Formatted 1 file(s) in <TIME>
```