crates/biome_cli/tests/snapshots/main_commands_format/format_is_disabled.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format file.js --write
```

## `biome.json`

```json
{
  "formatter": {
    "enabled": false
  }
}
```

## `file.js`

```js

function f() {
return { something }
}

```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your biome.json or biome.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - file.js
  


```

# Emitted Messages

```block
Formatted 0 files in <TIME>. No fixes applied.
```
