crates/biome_cli/tests/snapshots/main_commands_format/format_json_trailing_commas_all.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write file.json
```

## `biome.json`

```json
{
  "json": {
    "parser": { "allowTrailingCommas": true },
    "formatter": { "trailingCommas": "all" }
  }
}
```

## `file.json`

```json
{
	"loreum_ipsum_lorem_ipsum": "bar",
	"loreum_ipsum_lorem_ipsum": "bar",
	"loreum_ipsum_lorem_ipsum": "bar",
	"loreum_ipsum_lorem_ipsum": "bar",
	"loreum_ipsum_lorem_ipsum": "bar",
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
