crates/biome_cli/tests/snapshots/main_commands_format/format_json_when_allow_trailing_commas.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format file.json
```

## `biome.json`

```json
{
  "json": {
    "parser": { "allowTrailingCommas": true }
  }
}
```

## `file.json`

```json
{
    "array": [
        1,
    ],
}
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.json format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1 1 │   {
    2   │ - ····"array":·[
    3   │ - ········1,
    4   │ - ····],
    5   │ - }
      2 │ + → "array":·[1]
      3 │ + }
      4 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
